typescript/a2ui_agent/src/inference_formats/express/generated/ExpressParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { ExpressVisitor } from "./ExpressVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class ExpressParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly RAW_TRIPLE_STRING = 12;
    public static readonly TRIPLE_STRING = 13;
    public static readonly RAW_STRING = 14;
    public static readonly STANDARD_STRING = 15;
    public static readonly PATH = 16;
    public static readonly CHECK = 17;
    public static readonly NUMBER = 18;
    public static readonly BOOLEAN = 19;
    public static readonly IDENTIFIER = 20;
    public static readonly COMMENT = 21;
    public static readonly BLOCK_COMMENT = 22;
    public static readonly SEMICOLON = 23;
    public static readonly WS = 24;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_assignment = 2;
    public static readonly RULE_expression = 3;
    public static readonly RULE_array = 4;
    public static readonly RULE_map = 5;
    public static readonly RULE_map_entry = 6;
    public static readonly RULE_path = 7;
    public static readonly RULE_check = 8;
    public static readonly RULE_call = 9;
    public static readonly RULE_arg = 10;
    public static readonly RULE_named_arg = 11;
    public static readonly RULE_variable = 12;
    public static readonly RULE_literal = 13;
    public static readonly RULE_identifier = 14;
    public static readonly RULE_string = 15;

    public static readonly literalNames = [
        null, "'='", "'['", "','", "']'", "'{'", "'}'", "':'", "'('", "')'", 
        "'_'", "'null'", null, null, null, null, null, null, null, null, 
        null, null, null, "';'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "RAW_TRIPLE_STRING", "TRIPLE_STRING", "RAW_STRING", "STANDARD_STRING", 
        "PATH", "CHECK", "NUMBER", "BOOLEAN", "IDENTIFIER", "COMMENT", "BLOCK_COMMENT", 
        "SEMICOLON", "WS"
    ];
    public static readonly ruleNames = [
        "program", "statement", "assignment", "expression", "array", "map", 
        "map_entry", "path", "check", "call", "arg", "named_arg", "variable", 
        "literal", "identifier", "string",
    ];

    public get grammarFileName(): string { return "Express.g4"; }
    public get literalNames(): (string | null)[] { return ExpressParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return ExpressParser.symbolicNames; }
    public get ruleNames(): string[] { return ExpressParser.ruleNames; }
    public get serializedATN(): number[] { return ExpressParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, ExpressParser._ATN, ExpressParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, ExpressParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 35;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2096164) !== 0)) {
                {
                {
                this.state = 32;
                this.statement();
                }
                }
                this.state = 37;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 38;
            this.match(ExpressParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, ExpressParser.RULE_statement);
        try {
            this.state = 42;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 40;
                this.assignment();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 41;
                this.expression();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignment(): AssignmentContext {
        let localContext = new AssignmentContext(this.context, this.state);
        this.enterRule(localContext, 4, ExpressParser.RULE_assignment);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 46;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ExpressParser.IDENTIFIER:
                {
                this.state = 44;
                this.identifier();
                }
                break;
            case ExpressParser.PATH:
                {
                this.state = 45;
                this.path();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.state = 48;
            this.match(ExpressParser.T__0);
            this.state = 49;
            this.expression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 6, ExpressParser.RULE_expression);
        try {
            this.state = 58;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 51;
                this.array();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 52;
                this.map();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 53;
                this.path();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 54;
                this.check();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 55;
                this.call();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 56;
                this.variable();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 57;
                this.literal();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public array(): ArrayContext {
        let localContext = new ArrayContext(this.context, this.state);
        this.enterRule(localContext, 8, ExpressParser.RULE_array);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 60;
            this.match(ExpressParser.T__1);
            this.state = 72;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2096164) !== 0)) {
                {
                this.state = 61;
                this.expression();
                this.state = 66;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                        {
                        this.state = 62;
                        this.match(ExpressParser.T__2);
                        this.state = 63;
                        this.expression();
                        }
                        }
                    }
                    this.state = 68;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
                }
                this.state = 70;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 3) {
                    {
                    this.state = 69;
                    this.match(ExpressParser.T__2);
                    }
                }

                }
            }

            this.state = 74;
            this.match(ExpressParser.T__3);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public map(): MapContext {
        let localContext = new MapContext(this.context, this.state);
        this.enterRule(localContext, 10, ExpressParser.RULE_map);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 76;
            this.match(ExpressParser.T__4);
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1110016) !== 0)) {
                {
                this.state = 77;
                this.map_entry();
                this.state = 82;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 7, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                        {
                        this.state = 78;
                        this.match(ExpressParser.T__2);
                        this.state = 79;
                        this.map_entry();
                        }
                        }
                    }
                    this.state = 84;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 7, this.context);
                }
                this.state = 86;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 3) {
                    {
                    this.state = 85;
                    this.match(ExpressParser.T__2);
                    }
                }

                }
            }

            this.state = 90;
            this.match(ExpressParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public map_entry(): Map_entryContext {
        let localContext = new Map_entryContext(this.context, this.state);
        this.enterRule(localContext, 12, ExpressParser.RULE_map_entry);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 94;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ExpressParser.IDENTIFIER:
                {
                this.state = 92;
                this.identifier();
                }
                break;
            case ExpressParser.RAW_TRIPLE_STRING:
            case ExpressParser.TRIPLE_STRING:
            case ExpressParser.RAW_STRING:
            case ExpressParser.STANDARD_STRING:
                {
                this.state = 93;
                this.string_();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.state = 96;
            this.match(ExpressParser.T__6);
            this.state = 97;
            this.expression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public path(): PathContext {
        let localContext = new PathContext(this.context, this.state);
        this.enterRule(localContext, 14, ExpressParser.RULE_path);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 99;
            this.match(ExpressParser.PATH);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public check(): CheckContext {
        let localContext = new CheckContext(this.context, this.state);
        this.enterRule(localContext, 16, ExpressParser.RULE_check);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.match(ExpressParser.CHECK);
            this.state = 117;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 8) {
                {
                this.state = 102;
                this.match(ExpressParser.T__7);
                this.state = 114;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2096164) !== 0)) {
                    {
                    this.state = 103;
                    this.expression();
                    this.state = 108;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
                    while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                        if (alternative === 1) {
                            {
                            {
                            this.state = 104;
                            this.match(ExpressParser.T__2);
                            this.state = 105;
                            this.expression();
                            }
                            }
                        }
                        this.state = 110;
                        this.errorHandler.sync(this);
                        alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
                    }
                    this.state = 112;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    if (_la === 3) {
                        {
                        this.state = 111;
                        this.match(ExpressParser.T__2);
                        }
                    }

                    }
                }

                this.state = 116;
                this.match(ExpressParser.T__8);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public call(): CallContext {
        let localContext = new CallContext(this.context, this.state);
        this.enterRule(localContext, 18, ExpressParser.RULE_call);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 119;
            this.identifier();
            this.state = 120;
            this.match(ExpressParser.T__7);
            this.state = 132;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2096164) !== 0)) {
                {
                this.state = 121;
                this.arg();
                this.state = 126;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 15, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                        {
                        this.state = 122;
                        this.match(ExpressParser.T__2);
                        this.state = 123;
                        this.arg();
                        }
                        }
                    }
                    this.state = 128;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 15, this.context);
                }
                this.state = 130;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 3) {
                    {
                    this.state = 129;
                    this.match(ExpressParser.T__2);
                    }
                }

                }
            }

            this.state = 134;
            this.match(ExpressParser.T__8);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arg(): ArgContext {
        let localContext = new ArgContext(this.context, this.state);
        this.enterRule(localContext, 20, ExpressParser.RULE_arg);
        try {
            this.state = 138;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 18, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 136;
                this.named_arg();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 137;
                this.expression();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public named_arg(): Named_argContext {
        let localContext = new Named_argContext(this.context, this.state);
        this.enterRule(localContext, 22, ExpressParser.RULE_named_arg);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 140;
            this.identifier();
            this.state = 141;
            this.match(ExpressParser.T__0);
            this.state = 142;
            this.expression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public variable(): VariableContext {
        let localContext = new VariableContext(this.context, this.state);
        this.enterRule(localContext, 24, ExpressParser.RULE_variable);
        try {
            this.state = 146;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ExpressParser.T__9:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 144;
                this.match(ExpressParser.T__9);
                }
                break;
            case ExpressParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 145;
                this.identifier();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public literal(): LiteralContext {
        let localContext = new LiteralContext(this.context, this.state);
        this.enterRule(localContext, 26, ExpressParser.RULE_literal);
        try {
            this.state = 152;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ExpressParser.RAW_TRIPLE_STRING:
            case ExpressParser.TRIPLE_STRING:
            case ExpressParser.RAW_STRING:
            case ExpressParser.STANDARD_STRING:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 148;
                this.string_();
                }
                break;
            case ExpressParser.NUMBER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 149;
                this.match(ExpressParser.NUMBER);
                }
                break;
            case ExpressParser.BOOLEAN:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 150;
                this.match(ExpressParser.BOOLEAN);
                }
                break;
            case ExpressParser.T__10:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 151;
                this.match(ExpressParser.T__10);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public identifier(): IdentifierContext {
        let localContext = new IdentifierContext(this.context, this.state);
        this.enterRule(localContext, 28, ExpressParser.RULE_identifier);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 154;
            this.match(ExpressParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public string_(): StringContext {
        let localContext = new StringContext(this.context, this.state);
        this.enterRule(localContext, 30, ExpressParser.RULE_string);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 156;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 61440) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!ExpressParser.__ATN) {
            ExpressParser.__ATN = new antlr.ATNDeserializer().deserialize(ExpressParser._serializedATN);
        }

        return ExpressParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(ExpressParser.literalNames, ExpressParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return ExpressParser.vocabulary;
    }

    private static readonly decisionsToDFA = ExpressParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(ExpressParser.EOF, 0)!;
    }
    public statement(): StatementContext[];
    public statement(i: number): StatementContext | null;
    public statement(i?: number): StatementContext[] | StatementContext | null {
        if (i === undefined) {
            return this.getRuleContexts(StatementContext);
        }

        return this.getRuleContext(i, StatementContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_program;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class StatementContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public assignment(): AssignmentContext | null {
        return this.getRuleContext(0, AssignmentContext);
    }
    public expression(): ExpressionContext | null {
        return this.getRuleContext(0, ExpressionContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_statement;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitStatement) {
            return visitor.visitStatement(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class AssignmentContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public expression(): ExpressionContext {
        return this.getRuleContext(0, ExpressionContext)!;
    }
    public identifier(): IdentifierContext | null {
        return this.getRuleContext(0, IdentifierContext);
    }
    public path(): PathContext | null {
        return this.getRuleContext(0, PathContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_assignment;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitAssignment) {
            return visitor.visitAssignment(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ExpressionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public array(): ArrayContext | null {
        return this.getRuleContext(0, ArrayContext);
    }
    public map(): MapContext | null {
        return this.getRuleContext(0, MapContext);
    }
    public path(): PathContext | null {
        return this.getRuleContext(0, PathContext);
    }
    public check(): CheckContext | null {
        return this.getRuleContext(0, CheckContext);
    }
    public call(): CallContext | null {
        return this.getRuleContext(0, CallContext);
    }
    public variable(): VariableContext | null {
        return this.getRuleContext(0, VariableContext);
    }
    public literal(): LiteralContext | null {
        return this.getRuleContext(0, LiteralContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_expression;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitExpression) {
            return visitor.visitExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ArrayContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public expression(): ExpressionContext[];
    public expression(i: number): ExpressionContext | null;
    public expression(i?: number): ExpressionContext[] | ExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpressionContext);
        }

        return this.getRuleContext(i, ExpressionContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_array;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitArray) {
            return visitor.visitArray(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class MapContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public map_entry(): Map_entryContext[];
    public map_entry(i: number): Map_entryContext | null;
    public map_entry(i?: number): Map_entryContext[] | Map_entryContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Map_entryContext);
        }

        return this.getRuleContext(i, Map_entryContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_map;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitMap) {
            return visitor.visitMap(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Map_entryContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public expression(): ExpressionContext {
        return this.getRuleContext(0, ExpressionContext)!;
    }
    public identifier(): IdentifierContext | null {
        return this.getRuleContext(0, IdentifierContext);
    }
    public string(): StringContext | null {
        return this.getRuleContext(0, StringContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_map_entry;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitMap_entry) {
            return visitor.visitMap_entry(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class PathContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public PATH(): antlr.TerminalNode {
        return this.getToken(ExpressParser.PATH, 0)!;
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_path;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitPath) {
            return visitor.visitPath(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class CheckContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public CHECK(): antlr.TerminalNode {
        return this.getToken(ExpressParser.CHECK, 0)!;
    }
    public expression(): ExpressionContext[];
    public expression(i: number): ExpressionContext | null;
    public expression(i?: number): ExpressionContext[] | ExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpressionContext);
        }

        return this.getRuleContext(i, ExpressionContext);
    }
    public override get ruleIndex(): number {
        return ExpressParser.RULE_check;
    }
    public override accept<Result>(visitor: ExpressVisitor<Result>): Result | null {
        if (visitor.visitCheck) {
            return visitor.visitCheck(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class CallContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public arg(): ArgContext[];
    public arg(i: number): ArgContext | null;
    public arg(i?: number): ArgContext[] | ArgContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ArgContext);
        }
